--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
         crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="{% static 'css/custom_style.css' %}">
 
-    <style>
-        body {
-            padding-top: 56px; /* Ajuste para la barra de navegación fija */
-        }
-        .task-actions a {
-            margin-left: 5px;
-        } /* Pequeño ajuste para los botones de acción de tareas */
-        /* Estilo adicional para los botones de acción en la vista semanal si es necesario */
-        .action-buttons-semana a small { 
-            font-size: 0.7rem; 
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
