--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Agenda Personal{% endblock title %}</title>
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -18,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'lista_de_tareas_url' %}">Mi Agenda Personal</a>
+            <a class="navbar-brand" href="{% url 'mi_semana_actual_url' %}">Mi Agenda Personal</a>
             <button
                 class="navbar-toggler"
                 type="button"
