--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'css/custom_style.css' %}">
 
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'mi_semana_actual_url' %}">Mi Agenda Personal</a>
@@ -110,7 +110,7 @@
         </div>
     </nav>
 
-    <main class="container mt-4">
+    <main class="container mt-4 my-4">
         {# --- INICIO DE LA SECCIÓN DE MENSAJES --- #}
         {% if messages %}
             {% for message in messages %}
@@ -129,7 +129,7 @@
         {% block content %} {% endblock content %}
     </main>
 
-    <footer class="py-4 bg-light mt-auto text-center">
+    <footer class="py-4 bg-light mt-auto text-center ">
         {# Añadido text-center para esta opción #}
         <div class="container-fluid px-4">
             <div class="small">
